# file-list-generator

./: .gitignore  CLAUDE.md  Cargo.toml  IT_ADMIN_DOCUMENTATION.md  IT_ADMIN_REPORT.html  README.md  TEAMS_DISTRIBUTION_MESSAGE.txt
FileListGenerator_v1.1/: Install.bat  Quick_Setup_Guide.html  README.txt  Uninstall.bat
src/: filter.rs  gui.rs  main.rs  scanner.rs
