[package]
name = "file-list-generator"
version = "1.1.0"
edition = "2021"
authors = ["David Landry"]

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_Storage_FileSystem",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_UI_Input_KeyboardAndMouse",
] }
rayon = "1.10"
walkdir = "2.5"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.20"
crossbeam-channel = "0.5"

[build-dependencies]
winresource = "0.1"

[package.metadata.winresource]
FileDescription = "File List Generator"
ProductName = "File List Generator"
ProductVersion = "1.1.0"
LegalCopyright = "Copyright © 2025 David Landry"
OriginalFilename = "FileListGenerator.exe"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0

[[bin]]
name = "file-list-generator"
path = "src/main.rs"